# plugin-example-hex-browser

./: .gitignore  CMakeLists.txt  HelloWorldItem.cpp  HelloWorldItem.h  Helper.cpp  Helper.h  HexBrowserPluginInterface.h  LICENSE  PluginExampleHexBrowser.cpp  PluginExampleHexBrowser.h  README.md  main.cpp  resources.qrc
assets/: hexdev_logo_video.webm
qml/: DemoMain.qml  FadeContainer.qml  Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  Page6.qml  Page7.qml  Page8.qml  StandaloneView.qml
